# hdk-cli

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  release.yml
benches/: repack-roundtrip.rs
src/: execute.rs  keys.rs  magic.rs  main.rs
src/commands/: bar.rs  common.rs  compress.rs  crypt.rs  map.rs  mod.rs  pkg.rs  sdat.rs  sharc.rs
