[package]
name = "hdk-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hdk"
path = "src/main.rs"

[features]
rayon = ["dep:rayon"]
memmap2 = ["dep:memmap2"]

[dependencies]
hdk-firmware = { git = "https://github.com/ZephyrCodesStuff/hdk-rs", branch = "main" }
hdk-archive = { git = "https://github.com/ZephyrCodesStuff/hdk-rs", branch = "main", features = [
    "cloudflare_zlib",
] }
hdk-sdat = { git = "https://github.com/ZephyrCodesStuff/hdk-rs", branch = "main" }
hdk-secure = { git = "https://github.com/ZephyrCodesStuff/hdk-rs", branch = "main" }
hdk-comp = { git = "https://github.com/ZephyrCodesStuff/hdk-rs", branch = "main" }

clap = { version = "4.5.53", features = ["derive"] }
enum_dispatch = "0.3"
walkdir = "2.5.0"
dialoguer = "0.12.0"
entropy = "0.4.3"
infer = "0.19.0"
sha1_smol = "1.0.1"
ctr = "0.9.2"
hex = "0.4.3"
binrw = "0.15.0"
rand = "0.10.0"
rayon = { version = "1.11.0", optional = true }
memmap2 = { version = "0.9.10", optional = true }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "repack-roundtrip"
harness = false
